[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/style/default.theme" type="Theme" id=1]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.5
margin_top = -129.5
margin_right = 121.5
margin_bottom = 129.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 34.0
margin_right = 169.0
margin_bottom = 219.0
size_flags_horizontal = 4
size_flags_vertical = 5
custom_constants/separation = 13
alignment = 1

[node name="ProccedButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 135.0
margin_bottom = 103.0
text = "Proceed"

[node name="MainMenuButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 135.0
margin_bottom = 147.0
text = "Main Menu"
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ProccedButton" to="." method="_on_ProccedButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
